--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,5 +6,6 @@
 
     /* Completeness */
     "skipLibCheck": true                                 /* Skip type checking all .d.ts files. */
-  }
+  },
+  "include": ["./node_modules/redux-persist/types"]
 }
